<resources>
    <string name="app_name" translatable="false">Pocket Mode</string>

    <string name="settings">Settings</string>
    <string name="settings_use_pocket_mode">Use pocket mode</string>
    <string name="settings_lock_screen_delay_description">The delay before locking screen after covering proximity sensor:</string>
    <string name="settings_lock_screen_delay_cur">Current delay is %d ms.</string>
    <string name="settings_vibrate_before_locking">Vibrate before locking</string>
    <string name="settings_vibrate_before_locking_test">Vibrate</string>
    <string name="settings_vibrate_before_locking_duration_cur">Current duration is %d ms.</string>
    <string name="settings_vibrate_before_locking_duration_off">Currently disabled.</string>
    <string name="settings_overlay_before_locking">Show overlay before locking</string>
    <string name="settings_turn_screen_off_when_covered">Turn screen black while the proximity sensor is covered</string>
    <string name="settings_analytics">Send usage data anonymously</string>

    <string name="access">Permissions</string>
    <string name="access_accessibility_service">Pocket Mode uses accessibility service to send the command that locks the screen. Tap to grant accessibility service privileges</string>
    <string name="access_accessibility_service_dialog_title">How do we use accessibility service</string>
    <string name="access_accessibility_service_dialog_text">Pocket Mode uses accessibility service to send the command that locks the screen. Without it locking the screen would require a PIN code on each unlock, ruining the user experience.</string>
    <string name="access_accessibility_service_dialog_no">Close</string>
    <string name="access_accessibility_service_dialog_yes">Enable accessibility service</string>
    <string name="access_runtime_call_state">Pocket Mode reads call state to not turn screen off while call is active. Tap to grant call state privileges</string>
    <string name="access_runtime_notifications">Pocket Mode needs notification permission so its foreground-service and recovery notifications can be shown. Tap to grant notification privileges</string>
    <string name="access_overlays">Pocket Mode can draw overlay on top of the user apps to show user that the proximity sensor is covered.</string>

    <string name="how_it_works">Pocket mode monitors the proximity sensor for %d ms. after turning the screen on. If in this time window the proximity sensor has been covered for at least %d ms. the app turns the screen back off.</string>

    <string name="troubleshoot">Troubleshooting</string>
    <string name="troubleshoot_lock_screen">Lock screen</string>
    <string name="troubleshoot_lock_screen_description">When working correctly, pressing this button should lock the screen.</string>
    <string name="troubleshoot_proximity_description">When working correctly, covering the proximity sensor should change the icon to a crossed eye.</string>
    <string name="troubleshoot_reboot">Reboot the device, if it doesn\'t lock the screen after giving required permissions and enabling the service</string>
    <string name="troubleshoot_sw_sensor_title">You device may be using a virtual Proximity sensor that is prone to have calibration issues and may need a reset.</string>
    <string name="troubleshoot_sw_sensor_reset_app">Download the Proximity sensor reset app from the Play Store</string>

    <string name="overlay_title">Pocket mode is on</string>
    <string name="overlay_description">Uncover the top of your device</string>

    <string name="lab_sensors">Proximity sensors</string>

    <string name="help_code">Contribute on GitHub</string>
    <string name="help_disable_battery_optimizations">Open battery optimization settings</string>
    <string name="help_bug_report">Send a bug report</string>
    <string name="help_bug_report_dont_kill_my_app">App stops working after a while! #dontkillmyapp</string>
    <string name="help_translate">Translate to your language</string>
    <string name="help_donate">Donate to me</string>
    <string name="help_test">Laboratory</string>
    <string name="help_more_apps">Discover more apps</string>

    <string name="about">About</string>
    <string name="about_author">Developed by %s</string>
    <string name="about_author_artem_chepurnoy" translatable="false">Artem Chepurnyi</string>
    <string name="about_description">Pocket Mode is a free simple utility app with a single goal: prevent accidental touches while the device is in pocket. \n\nApp accomplishes this goal by turning the screen off after proximity sensor has been covered for some time.</string>

    <string name="notification_pocket_channel">Pocket mode service notification</string>
    <string name="notification_pocket_title">Pocket mode is running</string>
    <string name="notification_pocket_description">Long press the notification and hide it, if you don\'t want to see it constantly.</string>
    <string name="notification_restart_channel">Pocket mode restart notification</string>
    <string name="notification_restart_title">Pocket mode has been stopped by the system</string>
    <string name="notification_restart_description">Tap to restart the service</string>

    <string name="coming_soon">Coming soon</string>
    <string name="error">Oh, snap!</string>
    <string name="purchased">Purchased</string>
    <string name="ms">%d ms.</string>
    <string name="cm">%.1f cm.</string>
    <string name="reset">Reset</string>
    <string name="test">Test</string>

    <string name="accessibility_service_title">Pocket Mode</string>
    <string name="accessibility_event_screen_locked">Screen locked</string>

    <string name="accessibility_why_title">Grant accessibility service access</string>
    <string name="accessibility_why_description">Pocket Mode uses accessibility service to send the command
        that locks the screen.
        \n\nIf you want to use this app, you\'ll have to grant the privileges
        manually in the next screen.
    </string>

</resources>
