<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/settings"
        android:textAppearance="?textAppearanceLabelMedium"
        android:textColor="?colorTertiary"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lockScreenDelayLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_lock_screen_delay_description"
        android:textAppearance="?textAppearanceBodyMedium"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/settings" />

    <TextView
        android:id="@+id/lockScreenDelayMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceLabelSmall"
        app:layout_constraintBottom_toBottomOf="@id/lockScreenDelaySeekBar"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/lockScreenDelaySeekBar"
        tools:text="100 ms." />

    <TextView
        android:id="@+id/lockScreenDelayMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceLabelSmall"
        app:layout_constraintBottom_toBottomOf="@id/lockScreenDelaySeekBar"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="@id/lockScreenDelaySeekBar"
        tools:text="2000 ms." />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/lockScreenDelaySeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/lockScreenDelayMax"
        app:layout_constraintStart_toEndOf="@id/lockScreenDelayMin"
        app:layout_constraintTop_toBottomOf="@id/lockScreenDelayLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lockScreenDelayResetBtn"
        style="@style/ButtonOutlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/lockScreenDelaySeekBar" />

    <TextView
        android:id="@+id/lockScreenDelayCur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textAppearance="?textAppearanceLabelMedium"
        app:layout_constraintBaseline_toBaselineOf="@id/lockScreenDelayResetBtn"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        tools:text="@string/settings_lock_screen_delay_cur" />

    <TextView
        android:id="@+id/vibrateOnBeforeLockScreenDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?dividerHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lockScreenDelayCur" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/vibrateOnBeforeLockScreenCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:foreground="?selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:switchPadding="8dp"
        android:text="@string/settings_vibrate_before_locking"
        android:textAppearance="?textAppearanceBodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibrateOnBeforeLockScreenDivider" />

    <TextView
        android:id="@+id/vibrateDurationMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceLabelSmall"
        app:layout_constraintBottom_toBottomOf="@id/vibrateDurationSeekBar"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/vibrateDurationSeekBar"
        tools:text="100 ms." />

    <TextView
        android:id="@+id/vibrateDurationMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceLabelSmall"
        app:layout_constraintBottom_toBottomOf="@id/vibrateDurationSeekBar"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="@id/vibrateDurationSeekBar"
        tools:text="2000 ms." />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/vibrateDurationSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/vibrateDurationMax"
        app:layout_constraintStart_toEndOf="@id/vibrateDurationMin"
        app:layout_constraintTop_toBottomOf="@id/vibrateOnBeforeLockScreenCheckBox" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/vibrateDurationResetBtn"
        style="@style/ButtonOutlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/vibrateDurationSeekBar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/vibrateDurationTestBtn"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/test"
        app:layout_constraintEnd_toStartOf="@id/vibrateDurationResetBtn"
        app:layout_constraintTop_toTopOf="@id/vibrateDurationResetBtn" />

    <TextView
        android:id="@+id/vibrateDurationCur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textAppearance="?textAppearanceLabelMedium"
        app:layout_constraintBaseline_toBaselineOf="@id/vibrateDurationResetBtn"
        app:layout_constraintEnd_toStartOf="@id/vibrateDurationTestBtn"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        tools:text="@string/settings_vibrate_before_locking_duration_cur" />

    <TextView
        android:id="@+id/overlayOnBeforeLockScreenDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?dividerHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibrateDurationCur" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/overlayOnBeforeLockScreenCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:foreground="?selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:switchPadding="8dp"
        android:text="@string/settings_overlay_before_locking"
        android:textAppearance="?textAppearanceBodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overlayOnBeforeLockScreenDivider" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/proximityWakeLockCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="false"
        android:enabled="false"
        android:foreground="?selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:switchPadding="8dp"
        android:text="@string/settings_turn_screen_off_when_covered"
        android:textAppearance="?textAppearanceBodyLarge"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overlayOnBeforeLockScreenCheckBox" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/analyticsCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:foreground="?selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:switchPadding="8dp"
        android:text="@string/settings_analytics"
        android:textAppearance="?textAppearanceBodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proximityWakeLockCheckBox" />

    <TextView
        android:id="@+id/about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/about"
        android:textAppearance="?textAppearanceLabelMedium"
        android:textColor="?colorTertiary"
        app:layout_constraintEnd_toStartOf="@id/aboutAuthor"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/analyticsCheckBox" />

    <TextView
        android:id="@+id/aboutAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceLabelMedium"
        android:textColor="?colorTertiary"
        app:layout_constraintBaseline_toBaselineOf="@id/about"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        tools:text="@string/about_author" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_description"
        android:textAppearance="?textAppearanceBodyMedium"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/about" />

    <Space
        android:id="@+id/btnDivider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutText" />

    <TextView
        android:id="@+id/donateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/help_donate"
        android:textAppearance="?textAppearanceBodyLarge"
        app:drawableStartCompat="@drawable/ic_outline_credit_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnDivider" />

    <TextView
        android:id="@+id/codeBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/help_code"
        android:textAppearance="?textAppearanceBodyLarge"
        app:drawableStartCompat="@drawable/ic_outline_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/donateBtn" />

    <TextView
        android:id="@+id/translateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/help_translate"
        android:textAppearance="?textAppearanceBodyLarge"
        app:drawableStartCompat="@drawable/ic_outline_translate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeBtn" />

    <TextView
        android:id="@+id/moreAppsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/help_more_apps"
        android:textAppearance="?textAppearanceBodyLarge"
        app:drawableStartCompat="@drawable/ic_outline_apps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translateBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
