<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/troubleshooting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/troubleshoot"
        android:textAppearance="@style/TextSection"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/troubleshootingReboot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/troubleshoot_reboot"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/troubleshooting" />

    <TextView
        android:id="@+id/lockScreenBtnDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/troubleshoot_lock_screen_description"
        android:textAppearance="@style/TextSection"
        app:layout_constraintBottom_toBottomOf="@id/lockScreenBtn"
        app:layout_constraintEnd_toStartOf="@id/lockScreenBtn"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/lockScreenBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lockScreenBtn"
        style="@style/ButtonOutlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/troubleshoot_lock_screen"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/troubleshootingReboot" />

    <TextView
        android:id="@+id/proximityIconDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/troubleshoot_proximity_description"
        android:textAppearance="@style/TextSection"
        app:layout_constraintBottom_toBottomOf="@id/proximityIcon"
        app:layout_constraintEnd_toStartOf="@id/lockScreenBtn"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/proximityIcon" />

    <TextView
        android:id="@+id/proximityCmText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:textAppearance="@style/TextSection"
        app:layout_constraintBottom_toBottomOf="@id/proximityIcon"
        app:layout_constraintEnd_toStartOf="@id/proximityIcon"
        app:layout_constraintStart_toEndOf="@id/proximityIconDescription"
        app:layout_constraintTop_toTopOf="@id/proximityIcon"
        tools:text="10 cm." />

    <ImageView
        android:id="@+id/proximityIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_eye"
        android:text="@string/troubleshoot_lock_screen"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/lockScreenBtn" />

    <TextView
        android:id="@+id/labDivider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?dividerHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proximityIconDescription" />

    <TextView
        android:id="@+id/labBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/ic_test_tube"
        android:drawablePadding="16dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/help_test"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labDivider" />

</androidx.constraintlayout.widget.ConstraintLayout>
