<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/access"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/access"
        android:textAppearance="@style/TextSection"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accessibilityServiceBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/ic_outline_accessibility"
        android:drawablePadding="16dp"
        android:drawableTint="?colorAccent"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/access_accessibility_service"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/access" />

    <TextView
        android:id="@+id/callStateBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/ic_outline_phone"
        android:drawablePadding="16dp"
        android:drawableTint="?colorAccent"
        android:paddingHorizontal="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/access_runtime_call_state"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="?android:textColorPrimary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accessibilityServiceBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
